| Summary: | ASTERISK-29943: file.c: seeking to negative file offset is not prevented | ||
| Reporter: | N A (InterLinked) | Labels: | |
| Date Opened: | 2022-02-28 19:27:07.000-0600 | Date Closed: | 2022-04-26 18:42:08 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/FileFormatInterface |
| Versions: | 18.9.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | If you use ControlPlayback to rewind past the beginning of an audio file, in this case with ulaw files, you'll see warnings like this:
[2022-03-01 00:57:56] WARNING[1612][C-00000026]: format_pcm.c:134 pcm_seek: negative offset -237600, resetting to 0 [2022-03-01 00:57:56] WARNING[1612][C-00000026]: format_pcm.c:134 pcm_seek: negative offset -237760, resetting to 0 [2022-03-01 00:57:56] WARNING[1612][C-00000026]: format_pcm.c:134 pcm_seek: negative offset -237600, resetting to 0 [2022-03-01 00:57:57] WARNING[1612][C-00000026]: format_pcm.c:134 pcm_seek: negative offset -231840, resetting to 0 [2022-03-01 00:57:58] WARNING[1612][C-00000026]: format_pcm.c:134 pcm_seek: negative offset -237760, resetting to 0 [2022-03-01 00:57:58] WARNING[1612][C-00000026]: format_pcm.c:134 pcm_seek: negative offset -237600, resetting to 0 [2022-03-01 00:57:59] WARNING[1612][C-00000026]: format_pcm.c:134 pcm_seek: negative offset -232160, resetting to 0 [2022-03-01 00:57:59] WARNING[1612][C-00000026]: format_pcm.c:134 pcm_seek: negative offset -237600, resetting to 0 [2022-03-01 00:58:00] WARNING[1612][C-00000026]: format_pcm.c:134 pcm_seek: negative offset -237600, resetting to 0 [2022-03-01 00:58:01] WARNING[1612][C-00000026]: format_pcm.c:134 pcm_seek: negative offset -232160, resetting to 0 [2022-03-01 00:58:01] WARNING[1612][C-00000026]: format_pcm.c:134 pcm_seek: negative offset -237600, resetting to 0 [2022-03-01 00:58:01] WARNING[1612][C-00000026]: format_pcm.c:134 pcm_seek: negative offset -237600, resetting to 0 [2022-03-01 00:58:01] WARNING[1612][C-00000026]: format_pcm.c:134 pcm_seek: negative offset -237760, resetting to 0 [2022-03-01 00:58:02] WARNING[1612][C-00000026]: format_pcm.c:134 pcm_seek: negative offset -237440, resetting to 0 This shouldn't be throwing warnings, because a user rewinding a recording to the beginning is a perfectly legitimate thing to attempt. Two possible options are: 1) Have the file formats not throw warnings for this (but debugs instead), if there is no actual circumstance in which this would be a cause for concern 2) Catch this possibility in the ast core rewind function and set a floor of 0 for the offset to seek, preventing asking the file format for a negative seek time to begin with. A patch for possible option #2 is enclosed. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2022-02-28 19:27:08.254-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2022-04-26 18:42:09.265-0500 Change 18353 merged by Friendly Automation: file.c: Prevent formats from seeking negative offsets. [https://gerrit.asterisk.org/c/asterisk/+/18353|https://gerrit.asterisk.org/c/asterisk/+/18353] By: Friendly Automation (friendly-automation) 2022-04-26 18:46:26.992-0500 Change 18354 merged by Friendly Automation: file.c: Prevent formats from seeking negative offsets. [https://gerrit.asterisk.org/c/asterisk/+/18354|https://gerrit.asterisk.org/c/asterisk/+/18354] By: Friendly Automation (friendly-automation) 2022-04-26 19:25:00.424-0500 Change 18122 merged by Friendly Automation: file.c: Prevent formats from seeking negative offsets. [https://gerrit.asterisk.org/c/asterisk/+/18122|https://gerrit.asterisk.org/c/asterisk/+/18122] By: Friendly Automation (friendly-automation) 2022-04-27 02:03:12.382-0500 Change 18355 merged by George Joseph: file.c: Prevent formats from seeking negative offsets. [https://gerrit.asterisk.org/c/asterisk/+/18355|https://gerrit.asterisk.org/c/asterisk/+/18355] | ||